# szimg

./: .gitignore  Cargo.toml  README.md
asset/netpbm/: 6_colors.ppm  feep.pgm  j.pbm
asset/readme/: mandlebrot.ppm
doc/: netpbm.md
examples/: barnsley_fern.rs  complex.rs  julia.rs  mandlebrot.rs
script/: table_gen.py
src/: lib.rs
src/checksum/: adler.rs  crc.rs  mod.rs
src/color/: mod.rs
src/img/: mod.rs
src/img/bmp/: bmp.rs  mod.rs
src/img/jpg/: common.rs  dct.rs  huffman.rs  jpeg.rs  mod.rs  quant.rs  rle.rs
src/img/netpbm/: mod.rs  pam.rs  pbm.rs  pgm.rs  ppm.rs  utils.rs
src/img/png/: adler.rs  crc.rs  mod.rs  png.rs
src/netpbm/: mod.rs  pam.rs  pbm.rs  pgm.rs  ppm.rs  utils.rs
src/png/: mod.rs  png.rs
tests/: bmp_test.rs  helper.rs  jpeg_test.rs  netpbm_test.rs  png_test.rs
tests/output/: .gitkeep
