[package]
name = "tiny-img"
version = "0.1.0"
edition = "2018"

[lib]
name = "tiny_img"
path = "src/lib.rs"

[[example]]
name = "mandlebrot_set"
path = "examples/mandlebrot.rs"

[[example]]
name = "julia_set"
path = "examples/julia.rs"

[[example]]
name = "barnsley_fern"
path = "examples/barnsley_fern.rs"

[dependencies]
rand = "0.8.4"
