[package]
name = "tiny-img"
version = "0.1.0"
edition = "2018"

[lib]
name = "tiny_img"
path = "src/lib.rs"

[[tests]]
name = "netpbm_test"
path = "tests/netpbm_test.rs"

[[tests]]
name = "png_test"
path = "tests/png_test.rs"

[[tests]]
name = "jpeg_test"
path = "tests/jpeg_test.rs"

[[bench]]
name = "benchmark"
path = "benchs/main.rs"

[[example]]
name = "mandlebrot_set"
path = "examples/mandlebrot.rs"

[[example]]
name = "julia_set"
path = "examples/julia.rs"

[[example]]
name = "barnsley_fern"
path = "examples/barnsley_fern.rs"

[dependencies]
rand = "0.8.4"
lazy_static = "1.4.0"
